--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,7 @@
             "polyfills": "projects/example/src/polyfills.ts",
             "tsConfig": "projects/example/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+            "baseHref": "/xl/",
             "assets": [
               "projects/example/src/favicon.ico",
               "projects/example/src/assets"
@@ -64,7 +65,8 @@
             "styles": [
               "projects/example/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "webWorkerTsConfig": "projects/example/tsconfig.worker.json"
           },
           "configurations": {
             "production": {
@@ -133,7 +135,8 @@
             "styles": [
               "projects/example/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "webWorkerTsConfig": "projects/example/tsconfig.worker.json"
           }
         }
       }
